--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
   <link rel="sitemap" type="application/xml" title="Sitemap" href="assets/rss/sitemap.xml">
   <link rel="preload" href="/assets/fonts/Oswald-Regular.ttf" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/assets/fonts/Inter-Regular.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="stylesheet" href="assets/css/site.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="icon" href="favicon.png">
-  <script src="assets/js/site.js"></script>
   <link rel="alternate" type="application/rss+xml" href="assets/rss/pod.xml" title="Bulls Back Office Podcast">
   <link rel="alternate" type="application/rss+xml" href="assets/rss/blog.xml" title="bullsbackoffice.com">
 </head>
@@ -24,30 +23,30 @@
 <header>
   <img src="/assets/images/logo/bbo_logo.jpg" alt="banner">
   <nav>
-    <a href="javascript:void(0);" id="hamburger" onclick="toggleHamburger()" aria-label="menu">&#8801;</a>
+    <div id="menu" role="button" aria-label="menu">&#8801;</div>
     <div id="links">
       <a href="#blog" class="active">Blog</a>
       <a href="#about">About</a>
       <a href="#archive">Archive</a>
-      <form action="#search?q=" onsubmit="location.href=this.action+q.value; return false">
+      <form action="#search?q=" onsubmit="location.href=this.action+q.value; return false" aria-label="search">
         <input id="search" name="q" type="text" placeholder="search...">
       </form>
   </div>
   </nav>
 </header>
 
+<!-- hidden: just for seo -->
 <h1>Bulls Back Office | A Chicago Bulls Podcast</h1>
 
 <div class="container">
-  <!-- content will be inserted here -->
-  <main></main>
+  <main><!-- content will be inserted here --></main>
+  <button id="loadMore" class="hidden">Load more</button>
 </div>
 
 <footer>
   <div class="center small">&#105;&#110;&#116;&#101;&#114;&#110;&#64;&#98;&#117;&#108;&#108;&#115;&#98;&#97;&#99;&#107;&#111;&#102;&#102;&#105;&#99;&#101;&#46;&#99;&#111;&#109;</div>
 </footer>
 
-<!-- import webpack  -->
-<script src="dist/main.js"></script>
+<script type="module" src="app.js"></script>
 </body>
 </html>
