--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
   <div class="center small">&#105;&#110;&#116;&#101;&#114;&#110;&#64;&#98;&#117;&#108;&#108;&#115;&#98;&#97;&#99;&#107;&#111;&#102;&#102;&#105;&#99;&#101;&#46;&#99;&#111;&#109;</div>
 </footer>
 
-<script type="module" src="app.js"></script>
+<script type="module" src="src/app.js"></script>
 </body>
 </html>
